--- a/Presentation.tex
+++ b/Presentation.tex
@@ -142,7 +142,7 @@
 	\begin{itemize}
 		\item The net gravitational torque: $\tau_g =  l d GmM(\frac{1}{r_1^3} - \frac{1}{r_2^3})$.
 		\item Defining the function: $h(l) = \frac{1}{(d^2 +(x-l)^2)^{3/2}}$.
-		\item If $l<<d,x,r_0$ one can approximate: $h(l)-h(-l)\approx h'(0)\cdot 2l = \frac{6lx}{r_0^5}$.
+		\item If $l<<d,x,r_0$ approximation: $h(l)-h(-l)\approx h'(0)\cdot 2l = \frac{6lx}{r_0^5}$.
 		\item the net torque is proportional to the difference: $\tau_g = l d GmM[h(l)-h(-l)]\approx \frac{6l^2GmMxd} {r_0^5}$.
 	\end{itemize}
 	\hyperlink{frame:Gravimetric sensing}{>>} 
