--- a/Presentation.tex
+++ b/Presentation.tex
@@ -273,7 +273,7 @@
 		\item The measurement sensitivity is limited by noise. 
 		\item Reducing the noise enables higher sensitivity.
 		\pause
-		\item Fundamental limits are quantum uncertainty and shot noise. 
+		\item Fundamental limits are: quantum uncertainty, shot noise. 
 		
 	\end{itemize}
 \end{frame}
