--- a/Presentation.tex
+++ b/Presentation.tex
@@ -283,10 +283,9 @@
 	\begin{itemize}
 		\framesubtitle{Friction}
 		
-		\item Assuming above basic energy level the quantum uncertainty due to thermal energy is temperature dependent: $\delta\theta = \sqrt{\frac{k_B T}{\kappa}} \approx 4\cdot 10^{-8} [rad]$.
+		\item Quantum uncertainty due to thermal energy: $\delta\theta = \sqrt{\frac{k_B T}{\kappa}} \approx 4\cdot 10^{-8} [rad]$.
 		\item The shot noise limit is: $\delta\theta \approx 10^{-14} [\frac{rad}{Hz}] $.
 		\pause
-		\item The noise reduction allows active damping of the remaining noises using a PID controller. 
 		\item With PID tuned correctly the damped pendulum is at critical damping and oscillations become smaller.
 
 		
