--- a/Presentation.tex
+++ b/Presentation.tex
@@ -281,7 +281,7 @@
 % frame 2 - skip
 \begin{frame}{Experiment noises}
 	\begin{itemize}
-		\framesubtitle{Friction}
+		\framesubtitle{Fundamental noises}
 		
 		\item Quantum uncertainty due to thermal energy: $\delta\theta = \sqrt{\frac{k_B T}{\kappa}} \approx 4\cdot 10^{-8} [rad]$.
 		\item The shot noise limit is: $\delta\theta \approx 10^{-14} [\frac{rad}{Hz}] $.
