--- a/Presentation.tex
+++ b/Presentation.tex
@@ -341,7 +341,7 @@
 
 
 
-
+\iffalse
 
 \subsection[Basic Problem]{The basic problem that we have studed}
 
@@ -471,6 +471,6 @@
 \oldstylenums{2000}.
 	\end{thebibliography}
 \end{frame}
-
+\fi
 %%
 \end{document}
