--- a/Presentation.tex
+++ b/Presentation.tex
@@ -272,27 +272,26 @@
 		
 		\item Angle measurement is optical.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
-		\item When amplitude is smaller than the thermal limit, PID is effectively lowering the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
-		\item Reducing the uncertainty (noise) enables higher sensitivity.
 		\pause
+		\item Reducing the uncertainty $\delta\theta$ enables higher sensitivity.
+		\item When amplitude is smaller than the thermal limit, PID is effectively lowering the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
+		
 		
 	\end{itemize}
+	\hyperlink{frame:Gravitational measurement}{>>} 
 \end{frame}
 % frame 2 - skip
 \begin{frame}{Experiment noises}
 	\begin{itemize}
-		\framesubtitle{Fundamental noises}
-		
+		\framesubtitle{Fundamental limits}
+		\item Basic energy level quantum uncertainty: $delta\theta= \sqrt{\frac{\hslash\omega}{2\kappa}} \approx 10^{-16} [rad]$
 		\item Quantum uncertainty due to thermal energy: $\delta\theta = \sqrt{\frac{k_B T}{\kappa}} \approx 4\cdot 10^{-8} [rad]$.
-		\item The shot noise limit is: $\delta\theta \approx 10^{-14} [\frac{rad}{Hz}] $.
-		\pause
-		\item With PID tuned correctly the damped pendulum is at critical damping and oscillations become smaller.
-
+		\item Shot noise limit: $\delta\theta = \frac{1}{4\sqrt{2}\pi}\frac{\lambda}{L\sqrt{N}} \approx 10^{-14} [\frac{rad}{Hz}]$.
 		
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Gravitational measurement}
+\begin{frame}{\hypertarget{frame:Gravitational measurement}{Gravitational measurement}}
 	\begin{itemize}
 		
 		
