--- a/Presentation.tex
+++ b/Presentation.tex
@@ -191,7 +191,7 @@
 		\item System placed inside a vacuum chamber and acoustic box. 
 			
 	\end{itemize}
-	\hyperlink{frame:Radiation tourqe}{>>} 
+	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{>>} 
 \end{frame}
 % frame 2 - skip
 \begin{frame}{Environmental noises}
@@ -205,7 +205,7 @@
 		\item Net power from black body radiation is $p= A \sigma\epsilon[ T^4- T_0^4]$.
 		
 	\end{itemize}
-	\hyperlink{frame:Radiation tourqe}{>>} 
+	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{>>} 
 \end{frame}
 % frame 3 - skip
 \begin{frame}{Environmental noises}
@@ -216,26 +216,11 @@
 		\item At lower pressures (gas with laminar flow), the drag force is given by Stokes' law: $F_{drag} =  -b(P)\cdot v$.	
 		
 	\end{itemize}
-	\hyperlink{frame:Radiation tourqe}{>>} 
+	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{>>} 
 \end{frame}
+
 % frame 4
-\begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
-	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
-	\end{center}
-	\begin{itemize}		
-		\item Vacuum chamber is designed with two transparent windows with modulated light sources in front.
-		\pause
-		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
-		\pause
-		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Light sources result with a modulated net tourqe.
-		
-	\end{itemize}
-\end{frame}
-% frame 5
-\begin{frame}{Proportional–integral–derivative (PID) controller}
+\begin{frame}{\hypertarget{frame:Proportional–integral–derivative (PID) controller}{Proportional–integral–derivative (PID) controller}}
 	\begin{center}		
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
     \end{center}
@@ -246,7 +231,7 @@
 		\item The control is based on a proportional, integral and derivative response to the error (P-I-D).
 	\end{itemize}
 \end{frame}
-% frame 6
+% frame 5
 \begin{frame}{PID response}
 	\begin{center}		
 		\includegraphics[width=0.6\textwidth,keepaspectratio]{pid_diagram_powerpoint.jpg}
@@ -274,11 +259,11 @@
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\pause
 		\item Reducing the uncertainty $\delta\theta$ enables higher sensitivity.
-		\item When amplitude is smaller than the thermal limit, PID is effectively lowering the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
+		\item When amplitude is damped under the thermal limit, PID is effectively lowering the temperature; $\delta\theta = \sqrt{\frac{k_B T}{\kappa}}$. 
 		
 		
 	\end{itemize}
-	\hyperlink{frame:Gravitational measurement}{>>} 
+	\hyperlink{frame:Gravimetric measurement}{>>} 
 \end{frame}
 % frame 2 - skip
 \begin{frame}{Experiment noises}
@@ -291,7 +276,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{\hypertarget{frame:Gravitational measurement}{Gravitational measurement}}
+\begin{frame}{\hypertarget{frame:Gravimetric measurement}{Gravitational measurement}}
 	\begin{itemize}
 		
 		
@@ -337,7 +322,22 @@
 	\end{itemize}
 \end{frame}
 
-
+% frame 4
+\begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
+	\begin{center}		
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
+	\end{center}
+	\begin{itemize}		
+		\item Vacuum chamber is designed with two transparent windows with modulated light sources in front.
+		\pause
+		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
+		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
+		\pause
+		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
+		\item Light sources result with a modulated net tourqe.
+		
+	\end{itemize}
+\end{frame}
 
 
 \iffalse
