--- a/Presentation.tex
+++ b/Presentation.tex
@@ -255,7 +255,7 @@
     \end{center}
 	\begin{itemize}
 		
-		\item Angle measurement is optical.
+		\item Angle measurement is optical with a front mirror.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\pause
 		\item Reducing the uncertainty $\delta\theta$ enables higher sensitivity.
