--- a/Presentation.tex
+++ b/Presentation.tex
@@ -247,7 +247,7 @@
 	\end{itemize}
 \end{frame}
 
-\section{Measurement}
+\section{Thesis aims}
 % frame 1
 \begin{frame}{Experiment noises}
 	\begin{center}		
@@ -298,10 +298,10 @@
 		\framesubtitle{Study achievements}
 		
 		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
-		\item Design of a long period torsional pendulum with reduced noises and active damping of the motion. 
+		\item Design a torsional pendulum with active motion damping. 
 		\pause
 		\item Results suggest that the amplitude could be damped up to the Brownian motion uncertainty limit. 
-		\item When damping beyond the thermal quantum uncertainty, damping effectively cools down the pendulum temperature.
+		%\item When damping beyond the thermal quantum uncertainty, damping effectively cools down the pendulum temperature.
 		
 		
 	\end{itemize}
@@ -314,11 +314,11 @@
 		
 		
 		
-		\item Study contribution is that with the right conditions, damping process allows cooling the pendulum to the Brownian limit. 
+		\item Study contribution; with the right conditions, damping allows cooling up to the Brownian limit. 
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\pause
-		\item PID feedback might not be the best control algorithm (linear motion approximation, right parameters maintenance). 
-		\item The next stage would include a non linear motion approximation (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
+		\item PID is not the best control algorithm (linear motion approximation, right parameters maintenance). 
+		\item Next stage would include a non linear motion approximation (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
 	\end{itemize}
 \end{frame}
 
