--- a/Presentation.tex
+++ b/Presentation.tex
@@ -318,7 +318,8 @@
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\pause
 		\item PID is not the best control algorithm (linear motion approximation, right parameters maintenance). 
-		\item Next stage would include a non linear motion approximation (artificial neural network), towards the goal of damping beyond the room temperature uncertainty. 
+		\item Next stage would have non linear motion approximation.
+		\item Towards the goal of damping beyond room temperature uncertainty. 
 	\end{itemize}
 \end{frame}
 
