--- a/Presentation.tex
+++ b/Presentation.tex
@@ -317,9 +317,9 @@
 		\item Study contribution; with the right conditions, damping allows cooling up to the Brownian limit. 
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\pause
-		\item PID is not the best control algorithm (linear motion approximation, right parameters maintenance). 
+		\item PID is not the best control algorithm (linear approximation). 
 		\item Next stage would have non linear motion approximation.
-		\item Towards the goal of damping beyond room temperature uncertainty. 
+		\item Goal of damping beyond room temperature uncertainty. 
 	\end{itemize}
 \end{frame}
 
