--- a/Presentation.tex
+++ b/Presentation.tex
@@ -317,7 +317,7 @@
 		\item Study contribution; with the right conditions, damping allows cooling up to the Brownian limit. 
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
 		\pause
-		\item PID is not the best control algorithm (linear approximation). 
+		\item PID not the best control algorithm; linear approximation. 
 		\item Next stage would have non linear motion approximation.
 		\item Goal of damping beyond room temperature uncertainty. 
 	\end{itemize}
