--- a/Presentation.tex
+++ b/Presentation.tex
@@ -219,6 +219,7 @@
 	\hyperlink{frame:Proportional–integral–derivative (PID) controller}{>>} 
 \end{frame}
 
+
 % frame 4
 \begin{frame}{\hypertarget{frame:Proportional–integral–derivative (PID) controller}{Proportional–integral–derivative (PID) controller}}
 	\begin{center}		
@@ -244,6 +245,19 @@
 		\pause
 		\item The feedback applies an external correction to the process.	
 		\item Over time error is minimized (damped motion).
+	\end{itemize}
+\end{frame}
+% frame 6
+\begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
+	
+	\begin{itemize}		
+		
+		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
+		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
+		\pause
+		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
+		\item Two light sources result with a modulated net tourqe.
+		
 	\end{itemize}
 \end{frame}
 
@@ -290,6 +304,40 @@
 \end{frame}
 
 \section{Methods and results}
+\begin{frame}{Gravitational measurement}
+	\begin{itemize}
+		\framesubtitle{Study achievements}
+		
+		\item Torsional pendulum placed inside a vacuum chamber, angle measurement system and a feedback system. 
+		\item Laser beam deflected by the pendulum's front mirror and detected by a quadrant detector.
+		\pause
+		\item Feedback of two LED light sources, modulated in real time by an Arduino micro-controller.
+		%\item The angle is read in real time by the PID algorithm; radiation torque is exerted by the LED's flux.
+		
+		
+	\end{itemize}
+\end{frame}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 \section{Summary and conclusion}
@@ -335,7 +383,7 @@
 		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
 		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Light sources result with a modulated net tourqe.
+		\item Two light sources result with a modulated net tourqe.
 		
 	\end{itemize}
 \end{frame}
