--- a/Presentation.tex
+++ b/Presentation.tex
@@ -305,8 +305,11 @@
 
 \section{Methods and results}
 \begin{frame}{Gravitational measurement}
+	\begin{center}		
+			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
+	\end{center}
 	\begin{itemize}
-		\framesubtitle{Study achievements}
+		
 		
 		\item Torsional pendulum placed inside a vacuum chamber, angle measurement system and a feedback system. 
 		\item Laser beam deflected by the pendulum's front mirror and detected by a quadrant detector.
@@ -316,6 +319,7 @@
 		
 		
 	\end{itemize}
+	
 \end{frame}
 
 
@@ -341,9 +345,9 @@
 
 
 \section{Summary and conclusion}
-\begin{frame}{Gravitational measurement}
+\begin{frame}{Study achievements}
 	\begin{itemize}
-		\framesubtitle{Study achievements}
+		
 		
 		\item Explore possibilities of improving gravimetric measurements sensitivity and integration time. 
 		\item Design a torsional pendulum with active motion damping. 
@@ -355,12 +359,8 @@
 	\end{itemize}
 \end{frame}
 
-\section{Summary and conclusion}
-\begin{frame}{Gravitational measurement}
+\begin{frame}{Study contribution}
 	\begin{itemize}
-		\framesubtitle{Study contribution}
-		
-		
 		
 		\item Study contribution; with the right conditions, damping allows cooling up to the Brownian limit. 
 		\item Resulting with higher gravimetric measurement sensitivity than current state of the art.
