--- a/Presentation.tex
+++ b/Presentation.tex
@@ -311,7 +311,7 @@
 	\begin{itemize}
 		
 		
-		\item Torsional pendulum placed inside a vacuum chamber, angle measurement system and a feedback system. 
+		\item The torsional pendulum is placed inside a vacuum chamber, with angle measurement system and a feedback system. 
 		\item Laser beam deflected by the pendulum's front mirror and detected by a quadrant detector.
 		\pause
 		\item Feedback of two LED light sources, modulated in real time by an Arduino micro-controller.
