--- a/Presentation.tex
+++ b/Presentation.tex
@@ -314,7 +314,7 @@
 		\item The torsional pendulum is placed inside a vacuum chamber, with angle measurement system and a feedback system. 
 		\item Laser beam deflected by the pendulum's front mirror and detected by a quadrant detector.
 		\pause
-		\item Feedback of two LED light sources, modulated in real time by an Arduino micro-controller; controlled by a PID feed-back loop.
+		\item Feedback of two LED light sources, modulated in real time by an Arduino controller; controlled by the PID loop.
 		%\item The angle is read in real time by the PID algorithm; radiation torque is exerted by the LED's flux.
 		
 		
