--- a/Presentation.tex
+++ b/Presentation.tex
@@ -304,20 +304,19 @@
 \end{frame}
 
 \section{Methods and results}
-\begin{frame}{Gravitational measurement}
+\subsection{System structure}
+\begin{frame}{Experiment setup}
 	\begin{center}		
 			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
 	\end{center}
 	\begin{itemize}
-		
-		
+
 		\item The torsional pendulum is placed inside a vacuum chamber, with angle measurement system and a feedback system. 
 		\item Laser beam deflected by the pendulum's front mirror and detected by a quadrant detector.
 		\pause
 		\item Feedback of two LED light sources, modulated in real time by an Arduino controller; controlled by the PID loop.
 		%\item The angle is read in real time by the PID algorithm; radiation torque is exerted by the LED's flux.
-		
-		
+	
 	\end{itemize}
 	
 \end{frame}
