--- a/Presentation.tex
+++ b/Presentation.tex
@@ -321,8 +321,22 @@
 	
 \end{frame}
 
+\begin{frame}{Experiment setup}
+	\begin{center}		
+			\includegraphics[width=0.3\textwidth,keepaspectratio]{setup cropped.png}
+	\end{center}
+	\begin{itemize}
 
+		
+		\item Measurements are conducted when valve is closed and engine off.
 
+		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
+		\pause
+		\item CF vacuum chamber with light guides and three transparent windows in front.
+		\item measured pressure during the experiments is $P \approx 1\cdot 10^{−2} [pa]$
+	\end{itemize}
+	
+\end{frame}
 
 
 
