--- a/Presentation.tex
+++ b/Presentation.tex
@@ -328,7 +328,7 @@
 	\begin{itemize}
 
 		
-		\item Measurements conducted when valve is closed and engine off.
+		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
 		\pause
 		\item CF vacuum chamber with light guides and three transparent windows in front.
