--- a/Presentation.tex
+++ b/Presentation.tex
@@ -331,6 +331,24 @@
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
 		\pause
+		\item CF vacuum chamber with light guides and transparent windows.
+		\item Measured pressure during the experiments is $P \approx 1\cdot 10^{−2} [pa]$.
+		
+	\end{itemize}
+	
+\end{frame}
+
+
+\begin{frame}{Vacuum chamber}
+	\begin{center}		
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{chamber_front_names.PNG}
+	\end{center}
+	\begin{itemize}
+
+		
+		\item Measurements conducted with vacuum engine off.
+		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
+		\pause
 		\item CF vacuum chamber with light guides and three transparent windows in front.
 		\item Measured pressure during the experiments is $P \approx 1\cdot 10^{−2} [pa]$
 	\end{itemize}
