--- a/Presentation.tex
+++ b/Presentation.tex
@@ -327,11 +327,10 @@
 	\end{center}
 	\begin{itemize}
 
-		
+		\item Vacuum chamber with light guides and transparent windows.
+		\pause
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
-		\pause
-		\item CF vacuum chamber with light guides and transparent windows.
 		\item Measured pressure during the experiments is $P \approx 1\cdot 10^{−2} [pa]$.
 		
 	\end{itemize}
