--- a/Presentation.tex
+++ b/Presentation.tex
@@ -331,7 +331,7 @@
 		\pause
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
-		\item Measured pressure during the experiments is $P \approx 1\cdot 10^{−2} [pa]$.
+		\item Measured pressure during the experiments is $P \approx 1E−2 [pa]$.
 		
 	\end{itemize}
 	
