--- a/Presentation.tex
+++ b/Presentation.tex
@@ -321,14 +321,35 @@
 	
 \end{frame}
 
+\begin{frame}{Setup design}
+	\begin{center}		
+			\includegraphics[width=0.3\textwidth,keepaspectratio]{total_chamber.png}
+	\end{center}
+	\begin{itemize}
+
+		\item The design was carried out using the software Solid Works.
+		\item Torsional pendulum was manufactured by the university workshop.
+		\pause
+		\item The assembling and the experiments were performed at the lab.
+		\item System had undergone multiple changes; final design of system is presented.
+	
+	\end{itemize}
+	
+\end{frame}
+
+
+
 \begin{frame}{Experiment setup}
 	\begin{center}		
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{chamber_front_names.PNG}
 	\end{center}
 	\begin{itemize}
 
-		\item Vacuum chamber with light guides and transparent windows.
+		\item CF vacuum chamber with light guides and transparent windows.
 		\pause
+
+		
+
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
 		\item Measured pressure during the experiments is $P \approx  10^{-2} [pa]$.
