--- a/Presentation.tex
+++ b/Presentation.tex
@@ -328,9 +328,9 @@
 	\begin{itemize}
 
 		\item The design was carried out using the software Solid Works.
-		\item Torsional pendulum was manufactured by the university workshop.
+		\item Pendulum was manufactured by the university workshop.
 		\pause
-		\item The assembling and the experiments were performed at the lab.
+		\item Assembling and the experiments were performed at the lab.
 		\item System had undergone multiple changes; final design of system is presented.
 	
 	\end{itemize}
