--- a/Presentation.tex
+++ b/Presentation.tex
@@ -323,7 +323,7 @@
 
 \begin{frame}{Setup design}
 	\begin{center}		
-			\includegraphics[width=0.3\textwidth,keepaspectratio]{total_chamber.png}
+			\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}
 
@@ -331,7 +331,7 @@
 		\item Pendulum was manufactured by the university workshop.
 		\pause
 		\item Assembling and the experiments were performed at the lab.
-		\item System had undergone multiple changes; final design of system is presented.
+		\item System had undergone multiple changes; final design presented.
 	
 	\end{itemize}
 	
