--- a/Presentation.tex
+++ b/Presentation.tex
@@ -331,7 +331,7 @@
 		\item Pendulum was manufactured by the university workshop.
 		\pause
 		\item Assembling and the experiments were performed at the lab.
-		\item System had undergone multiple changes; final design presented.
+		\item System had undergone multiple changes final design presented.
 	
 	\end{itemize}
 	
