--- a/Presentation.tex
+++ b/Presentation.tex
@@ -329,9 +329,8 @@
 
 		\item The design was carried out using the software Solid Works.
 		\item Pendulum was manufactured by the university workshop.
-		\pause
 		\item Assembling and the experiments were performed at the lab.
-		\item System had undergone multiple changes final design presented.
+		\item System had undergone multiple changes; final design.
 	
 	\end{itemize}
 	
