--- a/Presentation.tex
+++ b/Presentation.tex
@@ -313,7 +313,6 @@
 
 		\item The torsional pendulum is placed inside a vacuum chamber, with angle measurement system and a feedback system. 
 		\item Laser beam deflected by the pendulum's front mirror and detected by a quadrant detector.
-		\pause
 		\item Feedback of two LED light sources, modulated in real time by an Arduino controller; controlled by the PID loop.
 		%\item The angle is read in real time by the PID algorithm; radiation torque is exerted by the LED's flux.
 	
@@ -344,11 +343,8 @@
 	\end{center}
 	\begin{itemize}
 
-		\item CF vacuum chamber with light guides and transparent windows.
+		\item CF vacuum chamber; light guides and transparent windows.
 		\pause
-
-		
-
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
 		\item Measured pressure during the experiments is $P \approx  10^{-2} [pa]$.
