--- a/Presentation.tex
+++ b/Presentation.tex
@@ -330,6 +330,8 @@
 		\item Pendulum was manufactured by the university workshop.
 		\item Assembling and the experiments were performed at the lab.
 		\item System had undergone multiple changes; final design.
+		\pause
+		\item materials were chosen to reduce magnetic noise and outgassing.
 	
 	\end{itemize}
 	
@@ -355,9 +357,21 @@
 
 
 
+\begin{frame}{Torsional pendulum}
+	\begin{center}		
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{chamber_front_names.PNG}
+	\end{center}
+	\begin{itemize}
 
-
-
+		\item Composed of thin rod, string, two masses on the sides, front mirror and a balancing mass.
+		\pause
+		\item The string is held by an adjustable mount, placing it accurately in front of the windows. 
+		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
+		\item Measured pressure during the experiments is $P \approx  10^{-2} [pa]$.
+		
+	\end{itemize}
+	
+\end{frame}
 
 
 
