--- a/Presentation.tex
+++ b/Presentation.tex
@@ -331,7 +331,7 @@
 		\item Assembling and the experiments were performed at the lab.
 		\item System had undergone multiple changes; final design.
 		\pause
-		\item materials were chosen to reduce magnetic noise and outgassing.
+		\item Chosen materials minimize magnetic noise and outgassing.
 	
 	\end{itemize}
 	
