--- a/Presentation.tex
+++ b/Presentation.tex
@@ -343,7 +343,7 @@
 	\end{center}
 	\begin{itemize}
 
-		\item CF vacuum chamber; light guides and transparent windows.
+		\item Transparent windows with light guides.
 		\pause
 		\item Measurements conducted with vacuum engine off.
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
