--- a/Presentation.tex
+++ b/Presentation.tex
@@ -357,7 +357,7 @@
 
 \begin{frame}{Torsional pendulum}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{chamber_front_names.PNG}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{pendulum_front_names.png}
 	\end{center}
 	\begin{itemize}
 
