--- a/Presentation.tex
+++ b/Presentation.tex
@@ -361,7 +361,7 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Composed of thin rod, string, two masses on the sides, front mirror and a balancing mass.
+		\item Thin rod, string, two masses, front mirror and a balancing mass.
 		\pause
 		\item The string is held by an adjustable mount, placing it accurately in front of the windows. 
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
