--- a/Presentation.tex
+++ b/Presentation.tex
@@ -361,9 +361,9 @@
 	\end{center}
 	\begin{itemize}
 
-		\item Thin rod, string, two masses, front mirror and a balancing mass.
+		\item Rod, string, two masses, front mirror and a balancing mass.
 		\pause
-		\item The string is held by an adjustable mount, placing it accurately in front of the windows. 
+		\item String held by an adjustable mount; placing it accurately in front of windows. 
 		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
 		\item Measured pressure during the experiments is $P \approx  10^{-2} [pa]$.
 		
