--- a/Presentation.tex
+++ b/Presentation.tex
@@ -364,13 +364,11 @@
 		\item Rod, string, two masses, front mirror and a balancing mass.
 		\pause
 		\item String held by an adjustable mount; placing it accurately in front of windows. 
-		\item Maintenance of low pressure; leakage(volume) and the outgassing(surface).
-		\item Measured pressure during the experiments is $P \approx  10^{-2} [pa]$.
-		
+		\item Dimensions aim achieving small torsion coefficient with longer oscillation period.
+		\item Measured: period $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
 	\end{itemize}
 	
 \end{frame}
-
 
 
 
