--- a/Presentation.tex
+++ b/Presentation.tex
@@ -364,8 +364,8 @@
 		\item Rod, string, two masses, front mirror and a balancing mass.
 		\pause
 		\item String held by an adjustable mount; placing it accurately in front of windows. 
-		\item Dimensions aim achieving small torsion coefficient with longer oscillation period.
-		\item Measured: period $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
+		\item Chosen dimensions for small torsion coefficient with longer oscillation period.
+		\item Measured: $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
 	\end{itemize}
 	
 \end{frame}
