--- a/Presentation.tex
+++ b/Presentation.tex
@@ -364,10 +364,27 @@
 		\item Rod, string, two masses, front mirror and a balancing mass.
 		\pause
 		\item String held by an adjustable mount; placing it accurately in front of windows. 
-		\item Chosen dimensions for small torsion coefficient with longer oscillation period.
+		\item Chosen dimensions aim small $\kappa$ with large $T$.
 		\item Measured: $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
 	\end{itemize}
 	
+\end{frame}
+
+% frame 4
+\begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
+	\begin{center}		
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
+	\end{center}
+	\begin{itemize}		
+		\item Vacuum chamber is designed with two transparent windows with modulated light sources in front.
+		\pause
+		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
+		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
+		\pause
+		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
+		\item Two light sources result with a modulated net tourqe.
+		
+	\end{itemize}
 \end{frame}
 
 
@@ -406,23 +423,6 @@
 		\item PID not the best control algorithm; linear approximation. 
 		\item Next stage would have non linear motion approximation.
 		\item Goal of damping beyond room temperature uncertainty. 
-	\end{itemize}
-\end{frame}
-
-% frame 4
-\begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
-	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
-	\end{center}
-	\begin{itemize}		
-		\item Vacuum chamber is designed with two transparent windows with modulated light sources in front.
-		\pause
-		\item Incident light beam causes force on the surface, due to momentum exchange with the electromagnetic field.
-		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
-		\pause
-		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Two light sources result with a modulated net tourqe.
-		
 	\end{itemize}
 \end{frame}
 
