--- a/Presentation.tex
+++ b/Presentation.tex
@@ -256,7 +256,7 @@
 		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
 		\pause
 		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Two light sources result with a modulated net tourqe.
+		\item Two light sources hitting the sides of the pendulum result with a modulated net tourqe.
 		
 	\end{itemize}
 \end{frame}
