--- a/Presentation.tex
+++ b/Presentation.tex
@@ -363,7 +363,7 @@
 
 		\item Rod, string, two masses, front mirror and a balancing mass.
 		\pause
-		\item String held by an adjustable mount; placing it accurately in front of windows. 
+		\item Held by an adjustable mount; for accurate location. 
 		\item Chosen dimensions aim achieving small $\kappa$ with large $T$.
 		\item Measured: $T = 84[s]$, $\kappa = 2.7\cdot10^{-6}[\frac{N\cdot m}{rad}]$.
 	\end{itemize}
