--- a/Presentation.tex
+++ b/Presentation.tex
@@ -381,10 +381,10 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}		
-		\item PID aims reaching critical damping of process, when tuned correct.
+		\item When PID tuned correct; critical damping of process.
 		\pause
-		\item When not tuned correct; either overshoot or slow response, both result with driven oscillator.
-		\item Mainly acts as friction, gradually slowing the oscillations velocity.
+		\item Overshoot or slow response; both result with driven oscillator.
+		\item Mainly acts as friction, gradually slowing velocity.
 		\pause
 		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t)$
 		\item $\gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi}   $
