--- a/Presentation.tex
+++ b/Presentation.tex
@@ -382,10 +382,11 @@
 	\end{center}
 	\begin{itemize}		
 		\item When PID tuned correct; critical damping of process.
+
+		\item Overshoot or slow response; result with driven oscillator.
 		\pause
-		\item Overshoot or slow response; both result with driven oscillator.
 		\item Mainly acts as friction, gradually slowing velocity.
-		\pause
+
 		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t)$
 		\item $\gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi}   $
 		
