--- a/Presentation.tex
+++ b/Presentation.tex
@@ -387,8 +387,8 @@
 		\pause
 		\item Mainly acts as friction, gradually slowing velocity.
 
-		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t)$
-		\item $\gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi}   $
+		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi} $
+		
 		
 	\end{itemize}
 \end{frame}
