--- a/Presentation.tex
+++ b/Presentation.tex
@@ -386,9 +386,9 @@
 		\item Overshoot or slow response; result with driven oscillator.
 		\pause
 		\item Mainly acts as friction, gradually slowing velocity.
-
 		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi} $
-		
+		\pause
+		\item When torque too small compared to amplitude; the damping affect is negligible
 		
 	\end{itemize}
 \end{frame}
