--- a/Presentation.tex
+++ b/Presentation.tex
@@ -388,7 +388,7 @@
 		\item Mainly acts as friction, gradually slowing velocity.
 		\item $\tau_{PID}(t) =  \gamma\dot{\theta}(t) =  \gamma\frac{2\pi}{T} \theta( t) \rightarrow \gamma  =\frac{\tau_{max}}{\theta_{max}}\cdot \frac{ T}{2\pi} $
 		\pause
-		\item When torque too small compared to amplitude; the damping affect is negligible
+		\item If torque too small compared to amplitude; negligible damping affect. 
 		
 	\end{itemize}
 \end{frame}
