--- a/Presentation.tex
+++ b/Presentation.tex
@@ -393,7 +393,7 @@
 
 \begin{frame}{Damped oscillator}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{damp.png}
 	\end{center}
 	\begin{itemize}		
 		
