--- a/Presentation.tex
+++ b/Presentation.tex
@@ -378,7 +378,7 @@
 
 \begin{frame}{Control stability}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{damp.png}
 	\end{center}
 	\begin{itemize}		
 		\item When PID tuned correct; critical damping of process.
