--- a/Presentation.tex
+++ b/Presentation.tex
@@ -414,13 +414,11 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}		
-		\item Vacuum chamber is designed with two transparent windows with modulated light sources in front.
+		\item PID torque; a modulated radiation torque.
+		\item Vacuum chamber is designed with transparent windows in front.
 		\pause
-		\item light sources result with a modulated net tourqe.
-		%\item The force depend on the relative angle, surface reflectance and absorbance and the incident light power.
-		\pause
-		\item With light perpendicular to a reflective surface $F  \approx\frac{2\eta\Theta}{{c}} $.
-		\item Two light sources result with a modulated net tourqe.
+		\item Torque controlled by changing the sources' flux difference.
+		
 		
 	\end{itemize}
 \end{frame}
