--- a/Presentation.tex
+++ b/Presentation.tex
@@ -414,11 +414,10 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}		
-		\item PID torque; a modulated radiation torque.
-		\item Vacuum chamber is designed with transparent windows in front.
+		\item PID damping torque; a modulated radiation torque.
+		\item Vacuum chamber is with transparent windows in front.
 		\pause
 		\item Torque controlled by changing the sources' flux difference.
-		
 		
 	\end{itemize}
 \end{frame}
