--- a/Presentation.tex
+++ b/Presentation.tex
@@ -416,18 +416,23 @@
 	\begin{itemize}		
 		\item PID damping torque; a modulated radiation torque.
 		\item Vacuum chamber is with transparent windows in front.
-		\pause
 		\item Torque controlled by changing the sources' flux difference.
 		
 	\end{itemize}
 \end{frame}
 
 
-
-
-
-
-
+\begin{frame}{Laser setup}
+	\begin{center}		
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
+	\end{center}
+	\begin{itemize}		
+		\item Single laser diode coupled in series into two acousto optic modulators, dividing into two controlled beams.
+		\item Modulation range of $10000$ steps and modulation frequency of $1 [Hz]$.
+		\item Minimized difference uncertainty; light sources with mutual source.
+		\item Large uncertainty; non linearity of the AOM response, power fluctuations.
+	\end{itemize}
+\end{frame}
 
 
 
