--- a/Presentation.tex
+++ b/Presentation.tex
@@ -427,7 +427,7 @@
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
 	\end{center}
 	\begin{itemize}		
-		\item Single laser diode coupled in series into two acousto optic modulators, dividing into two controlled beams.
+		\item Laser diode coupled in series into two acousto optic modulators; divided into two controlled beams.
 		\item Modulation range of $10000$ steps and modulation frequency of $1 [Hz]$.
 		\item Minimized difference uncertainty; light sources with mutual source.
 		\item Large uncertainty; non linearity of the AOM response, power fluctuations.
