--- a/Presentation.tex
+++ b/Presentation.tex
@@ -428,7 +428,7 @@
 	\end{center}
 	\begin{itemize}		
 		\item Laser diode coupled in series into two acousto optic modulators; divided into two controlled beams.
-		\item Modulation range of $10000$ steps and modulation frequency of $1 [Hz]$.
+		\item Range of $10000$ steps with frequency of $1 [Hz]$.
 		\item Minimized difference uncertainty; light sources with mutual source.
 		\item Large uncertainty; non linearity of the AOM response, power fluctuations.
 	\end{itemize}
