--- a/Presentation.tex
+++ b/Presentation.tex
@@ -429,8 +429,8 @@
 	\begin{itemize}		
 		\item Laser diode coupled in series into two acousto optic modulators; divided into two controlled beams.
 		\item Range of $10000$ steps with frequency of $1 [Hz]$.
-		\item Minimized difference uncertainty; light sources with mutual source.
-		\item Large uncertainty; non linearity of the AOM response, power fluctuations.
+		\item Minimized difference uncertainty; mutual source.
+		\item Large uncertainty; non linearity of the AOM response and power fluctuations proved to be larger.
 	\end{itemize}
 \end{frame}
 
