--- a/Presentation.tex
+++ b/Presentation.tex
@@ -424,7 +424,7 @@
 
 \begin{frame}{Laser setup}
 	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{total_chamber.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{aom.png}
 	\end{center}
 	\begin{itemize}		
 		\item Laser diode coupled in series into two acousto optic modulators; divided into two controlled beams.
