--- a/Presentation.tex
+++ b/Presentation.tex
@@ -434,7 +434,30 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}{Arduino microcontroller}
+	\begin{center}		
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
+	\end{center}
+	\begin{itemize}		
+		\item inexpensive 8-bit microcontroller with Pulse Width Modulation (PWM) analog outputs.
+		\item Fast switching of digital signal results with average analog signal.
+		\item Analog signal is duty cycle depended.
+		\item Large uncertainty; non linearity of the AOM response and power fluctuations proved to be larger.
+	\end{itemize}
+\end{frame}
 
+
+\begin{frame}{Laser setup}
+	\begin{center}		
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
+	\end{center}
+	\begin{itemize}		
+		\item Laser diode coupled in series into two acousto optic modulators; divided into two controlled beams.
+		\item Range of $10000$ steps with frequency of $1 [Hz]$.
+		\item Minimized difference uncertainty; mutual source.
+		\item Large uncertainty; non linearity of the AOM response and power fluctuations proved to be larger.
+	\end{itemize}
+\end{frame}
 
 
 
