--- a/Presentation.tex
+++ b/Presentation.tex
@@ -440,8 +440,8 @@
 	\end{center}
 	\begin{itemize}		
 		\item inexpensive 8-bit microcontroller with Pulse Width Modulation (PWM) analog outputs.
-		\item Fast switching of digital signal results with average analog signal.
-		\item Analog signal is duty cycle depended.
+		\item Fast switching of digital signal results with analog signal.
+		\item Analog signal is duty cycle depended: $V(t) =  \frac{V_d}{100}\cdot D(t)$
 		\item Large uncertainty; non linearity of the AOM response and power fluctuations proved to be larger.
 	\end{itemize}
 \end{frame}
