--- a/Presentation.tex
+++ b/Presentation.tex
@@ -436,13 +436,13 @@
 
 \begin{frame}{Arduino microcontroller}
 	\begin{center}		
-		\includegraphics[width=0.2\textwidth,keepaspectratio]{duty_cycle.png}
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{duty_cycle.png}
 	\end{center}
 	\begin{itemize}		
-		\item inexpensive 8-bit microcontroller with Pulse Width Modulation (PWM) analog outputs.
+		\item Inexpensive 8-bit microcontroller with Pulse Width Modulation (PWM) analog outputs.
 		\item Fast switching of digital signal results with analog signal.
 		\item Analog signal is duty cycle depended: $V(t) =  \frac{V_d}{100}\cdot D(t)$.
-		\item Modulation limited by controller bit-rate and clock frequency.
+		\item Modulation limited by bit-rate and clock frequency.
 	\end{itemize}
 \end{frame}
 
