--- a/Presentation.tex
+++ b/Presentation.tex
@@ -441,7 +441,7 @@
 	\begin{itemize}		
 		\item Inexpensive 8-bit microcontroller with Pulse Width Modulation (PWM) analog outputs.
 		\item Fast switching of digital signal results with analog signal.
-		\item Analog signal is duty cycle depended: $V(t) =  \frac{V_d}{100}\cdot D(t)$.
+		\item Analog signal depended on duty-cycle: $V(t) =  \frac{V_d}{100}\cdot D(t)$.
 		\item Modulation limited by bit-rate and clock frequency.
 	\end{itemize}
 \end{frame}
