--- a/Presentation.tex
+++ b/Presentation.tex
@@ -447,17 +447,21 @@
 \end{frame}
 
 
-\begin{frame}{Laser setup}
+\begin{frame}{Light emitting diode (LED)}
 	\begin{center}		
 		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
 	\end{center}
 	\begin{itemize}		
-		\item Laser diode coupled in series into two acousto optic modulators; divided into two controlled beams.
-		\item Range of $10000$ steps with frequency of $1 [Hz]$.
-		\item Minimized difference uncertainty; mutual source.
-		\item Large uncertainty; non linearity of the AOM response and power fluctuations proved to be larger.
+		\item Semiconductor light source with high power and long lifetime.
+		\item Due to electrons' life time, LED can be modulated up to $100MHz$.
+		\item Illumination angle varies between $45^0-120^0$ and hard to focus.
+		\item The LED light sources are coupled into light guides.
 	\end{itemize}
 \end{frame}
+
+
+
+
 
 
 
