--- a/Presentation.tex
+++ b/Presentation.tex
@@ -452,8 +452,8 @@
 		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
 	\end{center}
 	\begin{itemize}		
-		\item Semiconductor light source with high power and long lifetime.
-		\item Due to electrons' life time, LED can be modulated up to $100MHz$.
+		\item Light source with high power and long lifetime.
+		\item LED can be modulated up to $100MHz$ (electrons' lifetime).
 		\item Illumination angle varies between $45^0-120^0$ and hard to focus.
 		\item The LED light sources are coupled into light guides.
 	\end{itemize}
